--- a/Session1_Nodejs-introduce/package.json
+++ b/Session1_Nodejs-introduce/package.json
@@ -7,7 +7,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "start": "node homework.js"
+        "start": "node index.js"
     },
     "repository": {
         "type": "git",
